Added BaseUnit table to Unit tab. Added abbreviations to Units. Add and Edit on Units also works